# CodeSage-AI

./: .env.example  .gitignore  LICENSE  README.md  broken.py  demo.castmc  example.py  pyproject.toml  report.md  requirements.txt  test_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  code_review.yml
.history-memo/: 2026-01-09.md
ai_training/: requirements.txt
ai_training/notebooks/: training_notebook.ipynb
ai_training/scripts/: annotate_business_impact.py  balance_dataset.py  check_class_balance.py  collect_vulnerabilities.py  login_huggingface.py  login_huggingface_cli.py
core/: cli.py  cli.py,cover  detectors.py  detectors.py,cover  reporter.py  reporter.py,cover
core/ai/: ai_explainer.py  model_loader.py
docs/: PRIVACY_POLICY.md
docs/legal/: CONTRIBUTING.md  PRIVACY_POLICY.md  SECURITY.md
fixtures/: test_pickle.py  test_sql.py  vulnerable.py
tests/: __init__.py  test_cli.py  test_dangerous_functions.py  test_pickle_load.py  test_reporter.py  test_sql_detector.py
tests/ai/: test_ai_explainer.py
