[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesage-ai"
description = "AI-powered code analysis tool"
version = "0.1.0"
dependencies = [
    "click",
    "libcst",
    "pytest",
    "pytest-cov",
]

[project.scripts]
codesage = "core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "integrations", "tests"]
