[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesage-ai"
version = "0.1.0"
description = "AI-powered code review assistant"
authors = [{name = "CodeSage", email = "support@codesage.ai"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "libcst>=1.0.0",
    "click>=8.0",
]

[project.scripts]
codesage = "core.cli:main"
